[gd_scene load_steps=2 format=3 uid="uid://bv386xryg7vmt"]

[ext_resource type="Script" path="res://max_selection.gd" id="1_c5bcr"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c5bcr")

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -52.0
offset_right = 210.0
offset_bottom = -20.0
grow_vertical = 0
text = "Return to menu
"

[node name="RunButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 32)
layout_mode = 1
offset_left = 250.0
offset_top = 20.0
offset_right = 450.0
offset_bottom = 52.0
text = "Run step"

[node name="ReadButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 32)
layout_mode = 1
offset_left = 250.0
offset_top = 70.0
offset_right = 450.0
offset_bottom = 102.0
text = "Read more
"

[node name="OptionsButton" type="MenuButton" parent="."]
custom_minimum_size = Vector2(200, 32)
layout_mode = 1
offset_left = 475.0
offset_top = 20.0
offset_right = 675.0
offset_bottom = 52.0
text = "Options
"
flat = false
item_count = 6
popup/item_0/text = "Regenerate values"
popup/item_0/id = 0
popup/item_1/text = "Reset"
popup/item_1/id = 1
popup/item_2/text = "Property"
popup/item_2/id = 2
popup/item_2/separator = true
popup/item_3/text = "Even numbers"
popup/item_3/checkable = 1
popup/item_3/id = 3
popup/item_3/disabled = true
popup/item_4/text = "Odd numbers"
popup/item_4/checkable = 1
popup/item_4/id = 4
popup/item_4/disabled = true
popup/item_5/text = "Prime numbers"
popup/item_5/checkable = 1
popup/item_5/id = 5
popup/item_5/disabled = true

[node name="PseudocodeLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 250.0
offset_top = 120.0
offset_right = 705.0
offset_bottom = 340.0
text = "function MaximumValue(N, A, max)
	max = 0

	loop i=1 to N
		if A(i) > max then
			max = A(i)
		end of if
	end of loop
end of function"

[node name="InfoLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 440.0
offset_right = 465.0
offset_bottom = 540.0
text = "max = 0 
Selected property:"

[node name="HelpLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 608.0
offset_right = 710.0
offset_bottom = 668.0
bbcode_enabled = true
text = "[b][color=orange]NOTE:[/color][/b] The selected element will be highlighted in [color=red]RED[/color]. If the element matches the specified property, it will be highlighted in [color=lime]LIME[/color]."

[node name="DescriptionDialog" type="AcceptDialog" parent="."]
disable_3d = true
title = "Algorithm description"
position = Vector2i(20, 40)
size = Vector2i(680, 660)
mode = 3
transient = false
unresizable = true
always_on_top = true
popup_window = true
min_size = Vector2i(680, 660)
dialog_autowrap = true

[node name="RichTextLabel" type="RichTextLabel" parent="DescriptionDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 672.0
offset_bottom = 611.0
text = "Given is sequence (A) with N number of elements, and property (T). Give the largest element of the sequence!

Solution: Initially, a maximum element's index=1, meaning we assume the first element is the largest. After this, we examine all elements on loop step at a time, and compare it to the index of the current maximum. If element \"i\" is larger than element \"max\" then its index becomes the new value of \"max\". After running the loop, variable \"max\" will contain the index of the element, which is truly the largest of the sequence.

Example: The sequence(A): 5, 4, 2, 7

Initial value of \"max\": 1
No. of elements (N): 4

Loop I:=from 2 to 4
If A(I)>A(MAX) then MAX:=I;
Loop end

Loop on first step:
i=2,    A[2]=4
(4>5)=false    => we move one, value of \"max\" does not change
max=1

Loop on second step:
i=3,    A[3]=2
(2>5)=false    => we move one, value of \"max\" does not change
max=1

Loop on third step:
i=4,    A[4]=7
(7>5)=true => value of \"max\" changes to index of current element
max:=i => max:=4


The execution of the loop ends here, since \"i\" has reached 4. We have obtained the index of the largest element in sequence A with variable max."
